--- a/npm/package.json
+++ b/npm/package.json
@@ -5,9 +5,17 @@
   "license": "MIT",
   "dependencies": {
     "create-react-class": "^15.6.3",
+    "highlight.js": "^9.12.0",
+    "leaflet": "^1.3.4",
+    "leaflet-draw": "^1.0.3",
     "react": "^16.5.0",
-    "react-dom": "^16.5.0"
-  },
+    "react-dom": "^16.5.0",
+    "react-flip-move": "^3.0.2",
+    "react-highlight.js": "^1.0.7",
+    "react-transition-group": "^2.4.0",
+    "semantic-ui-react": "^0.82.4",
+    "vega-lib": "^4.2.0"
+},
   "devDependencies": {
     "webpack": "^4.18.0",
     "webpack-cli": "^3.1.0"
