--- a/npm/package.json
+++ b/npm/package.json
@@ -14,8 +14,9 @@
     "react-highlight.js": "^1.0.7",
     "react-transition-group": "^2.4.0",
     "semantic-ui-react": "^0.82.4",
+    "three.js": "^0.77.1",
     "vega-lib": "^4.2.0"
-},
+  },
   "devDependencies": {
     "webpack": "^4.18.0",
     "webpack-cli": "^3.1.0"
