--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "create-react-class": "^15.6.3",
+    "file-saver": "^2.0.1",
     "leaflet": "^1.3.4",
     "leaflet-draw": "^1.0.3",
     "react": "^16.6.0",
