--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
-      - run: clojure -Stree
+      - run: sudo apt-get install -y build-essential
 
       - save_cache:
           paths:
