--- a/reframe-template/package.json
+++ b/reframe-template/package.json
@@ -4,18 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "create-react-class": "^15.6.3",
-    "file-saver": "^2.0.1",
-    "leaflet": "^1.3.4",
-    "leaflet-draw": "^1.0.3",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
-    "semantic-ui-react": "^0.83.0",
-    "three.js": "^0.77.1",
-    "vega-lib": "^4.2.0"
+    "isomorphic-ws": "^4.0.1",
+    "ws": "^7.1.1"
   },
-  "devDependencies": {
-    "webpack": "^4.18.0",
-    "webpack-cli": "^3.1.0"
-  }
+  "devDependencies": {}
 }
