--- a/201910-skinny-aot/Makefile
+++ b/201910-skinny-aot/Makefile
@@ -1,5 +1,27 @@
-clean:
-	rm -rf pom.xml target my-skinny.jar
+all: build
 
-mvn:
+CLJ_SOURCES=$(sh find src)
+
+build: my-skinny.jar lib
+
+classes: deps.edn $(CLJ_SOURCES)
+	mkdir -p classes
+	clojure -A:build -m rgm.build
+
+lib: pom.xml
 	mvn dependency:copy-dependencies
+
+my-skinny.jar: classes pom.xml Manifest.txt
+	# jar cfm "$@" Manifest.txt -C classes rgm/ # doesn't seem to do anything
+	jar cf "$@" -C classes rgm/
+
+clean:
+	rm -rf classes
+
+clobber:
+	rm -rf lib my-skinny.jar
+
+pom.xml: deps.edn
+	clojure -Spom
+
+.PHONY=build clean
