--- a/template-reframe-aleph-psql/Makefile
+++ b/template-reframe-aleph-psql/Makefile
@@ -8,9 +8,7 @@ CSS_SOURCES=$(shell  find src/css -name "*.css")
 INTERMEDIATE_BUILD_PRODUCTS=resources/public/screen.min.css resources/public/app.min.js
 
 target/app.jar: deps.edn $(CLJ_SOURCES) $(CLJC_SOURCES) $(INTERMEDIATE_BUILD_PRODUCTS)
-	clojure -A:build \
-		--main uberdeps.uberjar \
-		--target "$@"
+	clojure -A:build --main uberdeps.uberjar --target "$@"
 
 resources/public/screen.min.css: node_modules src/css/postcss.config.js $(CSS_SOURCES)
 	npx postcss -c styles/postcss.config.js -o "$@" $(CSS_SOURCES)
