Wires up task runner cli

--- a/template-reframe-aleph-psql/.carve_ignore
+++ b/template-reframe-aleph-psql/.carve_ignore
@@ -7,4 +7,6 @@ react/Fragment
 react/createElement
 rgm.nrepl/start-server
 rgm.nrepl/stop-server
-rgm.server/-main
+rgm.http-server/route-tree
+rgm.http-server/make-app
+rgm.cli/-main
