--- a/template-reframe-aleph-psql/Justfile
+++ b/template-reframe-aleph-psql/Justfile
@@ -6,12 +6,20 @@ test:
 repl:
 	clj -A:test:dev
 
+# migrate the database
+migrate:
+	clojure --m rgm.cli migrate-db
+
+# rollback the database
+rollback:
+	clojure --m rgm.cli rollback-db
+
 # rebuild clj-kondo cache
 lint-cache:
 	clj-kondo --lint $(clojure -Spath)
 
 # hunt down unused vars
 carve:
-	clojure --main carve.main --opts '{:paths ["src/clj" "test/clj"]}'
+	clojure -m carve.main --opts '{:paths ["src/clj" "test/clj"]}'
 
 # vim: ft=make
