Wires up ragtime migrations

--- a/template-reframe-aleph-psql/.env.example
+++ b/template-reframe-aleph-psql/.env.example
@@ -1,2 +1,4 @@
-JDBC_DATABASE_URL=jdbc:postgresql://localhost:5432/an-example-database
-PORT=8080
+export JDBC_DATABASE_URL=jdbc:postgresql://localhost:5432/an-example-database
+export PORT=8080
+
+# vi:ft=sh
