--- a/template-reframe-aleph-psql/package.json
+++ b/template-reframe-aleph-psql/package.json
@@ -3,6 +3,7 @@
     "cssnano": "^4.1.10",
     "postcss": "^7.0.21",
     "postcss-cli": "^6.1.3",
+    "purgecss": "^2.0.6",
     "tailwindcss": "^1.2.0-canary.5",
     "ws": "^7.2.1"
   }
