--- a/202005-bundle/package.json
+++ b/202005-bundle/package.json
@@ -1,5 +1,9 @@
 {
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-node-resolve": "^7.1.3",
+    "rollup": "^2.10.2",
+    "rollup-plugin-node-globals": "^1.4.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
