--- a/template-reframe-reitit/package.json
+++ b/template-reframe-reitit/package.json
@@ -1,8 +1,9 @@
 {
   "dependencies": {
+    "@tailwindcss/ui": "^0.3.0",
     "cssnano": "^4.1.10",
-    "postcss": "^7.0.21",
-    "postcss-cli": "^6.1.3",
-    "tailwindcss": "^1.1.3"
+    "postcss": "^7.0.32",
+    "postcss-cli": "^7.1.1",
+    "tailwindcss": "^1.4.6"
   }
 }
