--- a/template-reframe-reitit/package.json
+++ b/template-reframe-reitit/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@tailwindcss/custom-forms": "^0.2.1",
     "@tailwindcss/ui": "^0.3.0",
     "cssnano": "^4.1.10",
     "postcss": "^7.0.32",
