--- a/202006-tailwind-layouts/package.json
+++ b/202006-tailwind-layouts/package.json
@@ -1,5 +1,5 @@
 {
-  "dependencies": {
+  "devDependencies": {
     "@tailwindcss/custom-forms": "^0.2.1",
     "@tailwindcss/ui": "^0.3.0",
     "cssnano": "^4.1.10",
