--- a/202006-tailwind-layouts/package.json
+++ b/202006-tailwind-layouts/package.json
@@ -6,5 +6,8 @@
     "postcss": "^7.0.32",
     "postcss-cli": "^7.1.1",
     "tailwindcss": "^1.4.6"
+  },
+  "dependencies": {
+    "react-beautiful-dnd": "^13.0.0"
   }
 }
