--- a/202102-react-table/package.json
+++ b/202102-react-table/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-table": "^7.6.3"
   }
 }
