--- a/202102-react-table/Makefile
+++ b/202102-react-table/Makefile
@@ -2,4 +2,4 @@ watch:
 	shadow-cljs watch app
 
 debugger:
-	clj -Sdeps '{:deps {jpmonettas/flow-storm-debugger {:mvn/version "0.6.0"}}}' -m flow-storm-debugger.main
+	clj -Sdeps '{:deps {jpmonettas/flow-storm-debugger {:mvn/version "0.6.0"}}}' -M -m flow-storm-debugger.main
