Figure out connection from within docker

--- a/202102-headless-chrome/Makefile
+++ b/202102-headless-chrome/Makefile
@@ -9,14 +9,27 @@ server:
 	clj -M -m rgm.main
 
 CONTAINER_NAME="rgm_headless_chrome"
- # CHROME_PORT on *host*: clojure needs to know this
+ # CHROME_PORT on *host* (ie. outside docker): clojure needs to know this
 CHROME_PORT=9222
+# test url needs to be visible to chrome within the docker instance so *not* localhost
+# see https://docs.docker.com/docker-for-mac/networking/
+# TEST_URL="http://localhost:4000"
+TEST_URL="http://host.docker.internal:4000/index.html"
 
-start-chrome:
+start-docker-chrome:
 	docker container run --detach --rm --name $(CONTAINER_NAME) --publish $(CHROME_PORT):9222 zenika/alpine-chrome --no-sandbox --remote-debugging-address=0.0.0.0 --remote-debugging-port=9222 --disable-gpu
 
-stop-chrome:
+stop-docker-chrome:
 	docker container stop $(CONTAINER_NAME)
 
-test-chrome:
-	docker container run -it --rm -v $(pwd):/usr/src/app zenika/alpine-chrome --no-sandbox --print-to-pdf=/usr/src/app/foo.pdf --hide-scrollbars https://www.chromestatus.com/
+test-docker-chrome:
+	docker container run -it --rm -v $(shell pwd):/usr/src/app zenika/alpine-chrome --headless --no-sandbox --print-to-pdf=/usr/src/app/testpage-docker.pdf --hide-scrollbars $(TEST_URL)
+
+shell-docker-chrome:
+	docker exec -it --user root $(CONTAINER_NAME) /bin/sh
+
+start-desktop-chrome:
+	"/Applications/Google Chrome.app/Contents/MacOS/Google Chrome" --remote-debugging-port $(CHROME_PORT)
+
+clean:
+	rm testpage-*.pdf
