--- a/202102-headless-chrome/Makefile
+++ b/202102-headless-chrome/Makefile
@@ -14,7 +14,7 @@ CHROME_PORT=9222
 # test url needs to be visible to chrome within the docker instance so *not* localhost
 # see https://docs.docker.com/docker-for-mac/networking/
 # TEST_URL="http://localhost:4000"
-TEST_URL="http://host.docker.internal:4000/index.html"
+TEST_URL="http://host.docker.internal:4000/"
 
 start-docker-chrome:
 	docker container run --detach --rm --name $(CONTAINER_NAME) --publish $(CHROME_PORT):9222 zenika/alpine-chrome --no-sandbox --remote-debugging-address=0.0.0.0 --remote-debugging-port=9222 --disable-gpu
