Set up dist/ in storybook, successful import in cljs

--- a/2022/03-cljs-storybook/reframe/package.json
+++ b/2022/03-cljs-storybook/reframe/package.json
@@ -2,7 +2,7 @@
   "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "storybook": "file:../storybook"
+    "mylib": "file:../storybook"
   },
   "devDependencies": {
     "webpack": "^5.68.0",
