--- a/2022/03-cljs-storybook/storybook/package.json
+++ b/2022/03-cljs-storybook/storybook/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "storybook",
+  "name": "mylib",
   "version": "0.1.0",
   "private": true,
+  "main": "dist/index.cjs.js",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
@@ -10,11 +11,13 @@
     "@types/node": "^16.11.22",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
+  },
+  "peerDependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -22,7 +25,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "bundle": "webpack --mode=production"
   },
   "eslintConfig": {
     "extends": [
@@ -61,6 +65,10 @@
     "@storybook/node-logger": "^6.4.18",
     "@storybook/preset-create-react-app": "^4.0.0",
     "@storybook/react": "^6.4.18",
-    "webpack": "^5.68.0"
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.6.0",
+    "ts-loader": "^9.2.6",
+    "webpack": "^5.68.0",
+    "webpack-cli": "^4.9.2"
   }
 }
