--- a/2022/04-ts-shadow/mylib/package.json
+++ b/2022/04-ts-shadow/mylib/package.json
@@ -5,10 +5,12 @@
   "private": false,
   "peerDependencies": {
     "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-scripts": "5.0.0"
+    "react-dom": "^18.0.0"
   },
   "dependencies": {
+  },
+  "devDependencies": {
+    "react-scripts": "5.0.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -20,10 +22,6 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
     "clean": "rimraf dist",
     "compile": "npm run clean && cross-env NODE_ENV=production babel src/components --out-dir dist --copy-files"
   },
