--- a/2022/12-reactflow/package.json
+++ b/2022/12-reactflow/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "reactflow": "^11.3.2"
   }
 }
