--- a/2025/202503-vault-renewal/Procfile
+++ b/2025/202503-vault-renewal/Procfile
@@ -1,3 +1,3 @@
-client: script/repl
+repl: script/repl
 vault: vault server -dev -dev-root-token-id=my_root_token
 setup: sleep 3 && script/setup && script/issue
